Fixed white space issue at the bottom of the page and fixed responsive issue with the charts.

--- a/css/grid.css
+++ b/css/grid.css
@@ -1,5 +1,5 @@
 .grid {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: grid;
   grid-template-columns: 1fr;
@@ -28,5 +28,8 @@ grid-area: main;
     "header header"
     "nav main";
     }
+
+  main {
+    min-height: 1vh;
   }
-  
+}
